@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-10-29 DP  1.8.1  Fix the locks tab on the server status dialogue so it
+                      works correctly with PostgreSQL 8.3+.
 2007-10-29 DP  1.8.1  Properly format the object comments shown in the
                       properties list when a collection node is selected. Per
                       report from Mike Blackwell.
